Time line Websocket Property Price
