# docs/swagger.json
@@ -356,8 +356,7 @@
                     {
                         "type": "string",
                         "name": "companyId",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -373,8 +372,7 @@
                     {
                         "type": "string",
                         "name": "propertyId",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -945,6 +943,49 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/request.CreateProperty"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/property/get-price": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Property"
+                ],
+                "parameters": [
+                    {
+                        "description": "json req body",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.GetPrice"
                         }
                     }
                 ],
@@ -1676,6 +1717,17 @@
         }
     },
     "definitions": {
+        "constant.EventStatus": {
+            "type": "string",
+            "enum": [
+                "HOLD",
+                "CONFIRM"
+            ],
+            "x-enum-varnames": [
+                "EVENT_STATUS_HOLD",
+                "EVENT_STATUS_CONFIRM"
+            ]
+        },
         "request.ChangePassword": {
             "type": "object",
             "required": [
@@ -1706,7 +1758,8 @@
                 "name",
                 "propertyId",
                 "propertygroupId",
-                "startDt"
+                "startDt",
+                "status"
             ],
             "properties": {
                 "companyId": {
@@ -1729,6 +1782,9 @@
                 },
                 "startDt": {
                     "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/constant.EventStatus"
                 }
             }
         },
@@ -1759,7 +1815,6 @@
             "required": [
                 "companyId",
                 "name",
-                "price",
                 "propertygroups"
             ],
             "properties": {
@@ -1771,9 +1826,6 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "price": {
-                    "type": "integer"
                 },
                 "propertygroups": {
                     "type": "array",
@@ -1863,6 +1915,25 @@
                 }
             }
         },
+        "request.GetPrice": {
+            "type": "object",
+            "required": [
+                "endDt",
+                "propertyId",
+                "startDt"
+            ],
+            "properties": {
+                "endDt": {
+                    "type": "string"
+                },
+                "propertyId": {
+                    "type": "string"
+                },
+                "startDt": {
+                    "type": "string"
+                }
+            }
+        },
         "request.Signin": {
             "type": "object",
             "required": [
@@ -1916,7 +1987,8 @@
                 "endDt",
                 "name",
                 "propertygroupId",
-                "startDt"
+                "startDt",
+                "status"
             ],
             "properties": {
                 "description": {
@@ -1933,6 +2005,9 @@
                 },
                 "startDt": {
                     "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/constant.EventStatus"
                 }
             }
         },
@@ -1957,8 +2032,7 @@
         "request.UpdateProperty": {
             "type": "object",
             "required": [
-                "name",
-                "price"
+                "name"
             ],
             "properties": {
                 "description": {
@@ -1966,9 +2040,6 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "price": {
-                    "type": "integer"
                 }
             }
         },
